# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.xx
DATE xx/xx/20xx
33rd Alpha Release

NEWS:


NEW: [features/improvements]
+What items are displayed in the Lexer menu are now configurable

BUG FIXES:
+Fix some minor vhdl highlighting issues.

#-----------------------------------------------------------------------------#

VERSION 0.5.32
DATE 12/28/2009
32nd Alpha Release

NEWS:

Another quick bug fix release to address some critical issues that were still
present after the last release.

BUG FIXES:
+Fix error introduced into extended autocomp in previous release.
+Handle win32api errors from calls to GetLongPathName.
+Restore html/xml autocomp behavior to put cursor between tags that are inserted.
+Fix issue with custom key profiles being saved to system directory instead of
 user config directory.

#-----------------------------------------------------------------------------#

VERSION 0.5.30
DATE 12/21/2009
31st Alpha Release

NEWS:

Quick bug fix release for some issues that arose after the last release.

BUG FIXES:
+Fix Unicode handling for file names when opening files from the command line.
+Fix bug in not properly shutting down ipc server on exit app event.
+Fix bug in not automatically continuing with the window closure when a modified
file action takes place.
+Fix duplicate entries in autocomp lists that could occur when using extended
autocomp (patch from cowo78)
+Fix replace action not being working when up is selected as the the find direction.
+Fix index error when accessing empty history cache.
+Fix error in returning a list instead of a string when getcalltip fails.
+Fix error handling for when select_style has no background color defined. 

#-----------------------------------------------------------------------------#

VERSION 0.5.25
DATE 12/15/2009